Fixed a regression where TTS controls would be misaligned

--- a/src/view/reader/controls/ReaderControls.css
+++ b/src/view/reader/controls/ReaderControls.css
@@ -6,6 +6,7 @@
   margin-right: 5px;
 }
 
+#tts-controls,
 #page-controls {
   display: flex;
   flex-direction: row;
